--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -16,7 +16,7 @@ $black-color: #232323;
 $grey-color: #818181;
 $aqua-color: #2aa898;
 $blue-color: #0eadff;
-$testcolor: #FFFEEE;
+$testcolor: #fffeee;
 
 // Paddings
 $paddings-mobile: 8px;
