--- a/src/scss/blocks/breadcumbs.scss
+++ b/src/scss/blocks/breadcumbs.scss
@@ -1,12 +1,14 @@
 .breadcumbs {
-  color: $grey-color;
   padding: 23px 0;
+
+  color: $grey-color;
 }
 .breadcumbs__list {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
+
   list-style-type: none;
 }
 .breadcumbs__item {
@@ -15,27 +17,30 @@
     margin-right: 12px;
     padding-right: 17px;
     &::after {
+      content: "";
       position: absolute;
       top: 50%;
       right: 0;
-      transform: translateY(-50%);
-      content: "";
+
       width: 5px;
       height: 9px;
 
-      background-image: url('@img/icons/breadcumbsw-arrow.svg');
-      background-position: center;
+      background-image: url("@img/icons/breadcumbsw-arrow.svg");
       background-repeat: no-repeat;
+      background-position: center;
+      transform: translateY(-50%);
     }
   }
 }
 .breadcumbs__link {
   display: inline-flex;
   padding: 2px;
-  text-decoration: none;
-  color: inherit;
+
   font-size: 13px;
   line-height: 16px;
+  color: inherit;
+  text-decoration: none;
+
   cursor: pointer;
 }
 a.breadcumbs__link {
