--- a/src/scss/blocks/certificates.scss
+++ b/src/scss/blocks/certificates.scss
@@ -1,13 +1,12 @@
 .certificates {
-
   @media (min-width: $tablet-width) {
     padding-top: 35px;
+
     background-image: url("@img/about-bg.png");
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
   }
-
 }
 .certificates__content {
   display: flex;
@@ -17,18 +16,20 @@
   margin-bottom: 27px;
 }
 .certificates__list {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0;
+
+  list-style-type: none;
+
   gap: 30px;
 
   @media (min-width: $tablet-width) {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+
     gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
   }
 
   @media (min-width: $desktop-width) {
@@ -37,24 +38,25 @@
 }
 .certificates__item {
   @media (max-width: $max-mobile-width) {
-    max-width: 370px;
     align-self: center;
+    max-width: 370px;
   }
-
 }
 .certificates__link {
   display: flex;
   flex-direction: column;
-  text-decoration: none;
   height: 100%;
   padding-top: 18px;
+
+  text-decoration: none;
+
   background-color: $white-color;
 
   @media (min-width: $tablet-width) {
     padding-right: 55px;
   }
 
-  &:hover{
+  &:hover {
     & .certificates__item-title {
       color: $button-color;
     }
@@ -65,22 +67,25 @@
 }
 .certificates__item-title {
   margin: 0;
+  margin-bottom: 10px;
   padding: 0;
+
   font-weight: 600;
   font-size: 17px;
   line-height: 130%;
   color: $blue-color;
-  margin-bottom: 10px;
   text-transform: uppercase;
+
   transition: color 0.3s ease;
 }
 .certificates__item-description {
   margin: 0;
+  margin-bottom: 20px;
   padding: 0;
+
   font-weight: 400;
   font-size: 13px;
   line-height: 130%;
-  margin-bottom: 20px;
   color: $black-color;
 }
 .certificates__item-title,
@@ -90,5 +95,5 @@
   }
 }
 .certificates__image {
-  filter: drop-shadow(0px 0px 15px rgba(0, 0, 0, 0.08))
+  filter: drop-shadow(0px 0px 15px rgba(0, 0, 0, 0.08));
 }
