--- a/src/scss/blocks/comparison.scss
+++ b/src/scss/blocks/comparison.scss
@@ -1,6 +1,7 @@
 .comparison {
   padding-top: 25px;
   padding-bottom: 25px;
+
   background-color: $bg2-color;
 
   @media (min-width: $desktop-width) {
@@ -16,38 +17,38 @@
   }
 }
 .comparison__categories {
+  display: flex;
+  flex-wrap: wrap;
   margin: 0;
   margin-bottom: 35px;
   padding: 0;
+
   list-style-type: none;
-  display: flex;
-  flex-wrap: wrap;
+
   gap: 11px;
 
   @media (min-width: $desktop-width) {
     margin-bottom: 30px;
   }
 }
-.comparison__category {
-}
+
 .comparison__category-link {
   position: relative;
+
   display: flex;
   align-self: flex-start;
   margin: 0;
   padding: 8px 10px;
 
-  background-color: $white-color;
-  border: 1px solid #ebebeb;
-  text-decoration: none;
-  text-transform: uppercase;
-
   font-weight: 600;
   font-size: 16px;
   line-height: 125%;
-
   color: $blue-color;
+  text-transform: uppercase;
+  text-decoration: none;
 
+  background-color: $white-color;
+  border: 1px solid #ebebeb;
   cursor: default;
 
   transition: border-color 0.3s ease;
@@ -57,8 +58,8 @@
     border-color: $blue-color;
   }
   &:focus-visible {
-    outline: none;
     border-color: $blue-color;
+    outline: none;
   }
   &:active {
     opacity: 0.7;
@@ -67,24 +68,25 @@
 .comparison__category-link--active {
   border-color: $blue-color;
 }
-.comparison__category-link-text {
-}
+
 .comparison__category-products-cnt {
   margin-left: 5px;
+
   color: $bg-color;
 }
 .comparison__cards {
   position: relative;
+
+  display: flex;
   margin: 0 auto;
   padding: 0 8px;
 
-  display: flex;
   gap: 5px;
 
   @media (min-width: $desktop-width) {
+    max-width: 1441px;
     margin: 0 auto;
     padding: 0 30px;
-    max-width: 1441px;
   }
 
   @media (max-width: 1555px) {
@@ -92,16 +94,15 @@
   }
 }
 .comparison__mobile-props-list {
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: column;
+  width: 25%;
   margin: 0;
   padding: 0;
   padding-top: 20px;
+
   list-style-type: none;
-
-  width: 25%;
-
-  display: flex;
-  flex-direction: column;
-  flex-shrink: 0;
 
   @media (min-width: $tablet-width) {
     display: none;
@@ -109,6 +110,7 @@
 }
 .comparison__mobile-props-item {
   padding-top: 20px;
+
   font-weight: 700;
   font-size: 13px;
   line-height: 130%;
@@ -125,19 +127,21 @@
   }
 }
 .comparison__cards-list {
+  display: flex;
   margin: 0;
   padding: 0;
-  list-style-type: none;
 
-  display: flex;
+  list-style-type: none;
 }
 
 .comparison__card {
+  position: relative;
+
+  max-width: 464px;
   padding: 20px 10px;
   padding-right: 0;
-  position: relative;
+
   background-color: $white-color;
-  max-width: 464px;
 
   @media (min-width: $desktop-width) {
     padding: 0 20px;
@@ -147,16 +151,19 @@
 .comparison__characteristics-list {
   margin: 0;
   padding: 0;
+
   list-style-type: none;
 }
 .comparison__characteristics-item {
-  padding: 12px 0;
   display: flex;
-  border-bottom: 1px solid #EBEBEB;
+  padding: 12px 0;
+
+  border-bottom: 1px solid #ebebeb;
 
   @media (min-width: $desktop-width) {
-    gap: 23px;
     align-items: center;
+
+    gap: 23px;
   }
 
   @media (max-width: $max-mobile-width) {
@@ -176,8 +183,8 @@
   }
 }
 .comparison__characteristics-name {
-  width: 260px;
   flex-shrink: 0;
+  width: 260px;
 
   font-weight: 700;
   font-size: 14px;
@@ -190,8 +197,8 @@
 .comparison__characteristics-item--mobile {
   & .comparison__characteristics-name {
     @media (max-width: $max-mobile-width) {
-      max-width: 95px;
       display: block;
+      max-width: 95px;
     }
   }
 }
@@ -200,23 +207,24 @@
 .comparison__characteristics-item--price {
   margin: 0;
   padding: 0;
+
   border-bottom: none;
   & .comparison__characteristics-name {
     display: none;
   }
-
 }
 .comparison__model {
   display: inline-block;
   margin: 0;
   padding: 0;
 
-  font-family: "Jost", "Arial", sans-serif;
   font-weight: 500;
   font-size: 15px;
   line-height: 115%;
-  text-decoration: none;
+  font-family: "Jost", "Arial", sans-serif;
   color: inherit;
+  text-decoration: none;
+
   transition: all 0.3s ease;
 
   @media (max-width: $max-mobile-width) {
@@ -225,6 +233,7 @@
 
   @media (min-width: $desktop-width) {
     margin-bottom: 22px;
+
     font-size: 20px;
     line-height: 23px;
   }
@@ -234,21 +243,21 @@
     text-decoration: underline;
   }
   &:focus-visible {
-    outline: 2px solid $blue-color;
     border-radius: 2px;
+    outline: 2px solid $blue-color;
   }
   &:active {
     opacity: 0.7;
   }
 }
 .comparison__model-card-image-link {
-  margin-top: auto;
   display: flex;
-  width: 100%;
-  align-items: center;
   justify-content: center;
-  max-height: 306px;
+  align-items: center;
+  width: 100%;
   min-height: 135px;
+  max-height: 306px;
+  margin-top: auto;
   margin-bottom: 20px;
 }
 .comparison__card-image {
@@ -268,12 +277,12 @@
 .comparison__characteristics-item--price {
   padding: 0;
   padding-bottom: 20px;
-  border-bottom: 1px solid #EBEBEB;
+
+  border-bottom: 1px solid #ebebeb;
 
   @media (max-width: $max-mobile-width) {
     padding-top: 20px;
   }
-
 }
 .comparison__prices {
   display: flex;
@@ -283,10 +292,10 @@
   margin: 0;
   padding: 0;
 
-  font-family: "Jost", "Arial", sans-serif;
   font-weight: 500;
   font-size: 15px;
   line-height: 115%;
+  font-family: "Jost", "Arial", sans-serif;
 
   @media (min-width: $desktop-width) {
     font-size: 20px;
@@ -313,17 +322,19 @@
 .comparison__card-buttons {
   display: flex;
   flex-direction: column;
-  gap: 15px;
   padding: 20px 0;
+
+  gap: 15px;
 
   @media (min-width: $desktop-width) {
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
   }
 }
 .comparison__card-button {
   min-width: 130px;
+
   clip-path: none;
 
   &:focus-visible {
@@ -333,16 +344,16 @@
   }
 
   &:hover {
-    background-color: $blue-color;
     color: $white-color;
+
+    background-color: $blue-color;
   }
 
   @media (max-width: $max-mobile-width) {
     width: 100%;
-    max-width: 100%;
     min-width: 0;
+    max-width: 100%;
   }
-
 }
 .comparison__card-toolbar-button {
   font-size: 14px;
