--- a/src/scss/blocks/equipment-card.scss
+++ b/src/scss/blocks/equipment-card.scss
@@ -1,25 +1,31 @@
 .equipment-card {
   position: relative;
-  height: 320px;
-  max-width: 556px;
-  padding-top: 28px;
-  padding-left: 29px;
-  padding-bottom: 36px;
-  background: linear-gradient(180deg, #453FA9 0%, #675FC6 100%);
-  overflow: hidden;
   z-index: 1;
+
+  max-width: 556px;
+  height: 320px;
+  padding-top: 28px;
+  padding-bottom: 36px;
+  padding-left: 29px;
+  overflow: hidden;
+
+  background: linear-gradient(180deg, #453fa9 0%, #675fc6 100%);
 
   &:before {
     content: "";
     position: absolute;
-    left: 0;
     top: 0;
+    left: 0;
+    z-index: -2;
+
     width: 100%;
     height: 100%;
+
     background-color: lighten($bg-color, 15%);
-    clip-path: circle(0 at left top);
+
     transition: 0.3s linear;
-    z-index: -2;
+
+    clip-path: circle(0 at left top);
   }
 
   &:hover {
@@ -34,26 +40,27 @@
   }
 }
 .equipment-card__content {
-  height: 100%;
-  margin: 0;
-  padding: 0;
   display: flex;
   flex-direction: column;
   max-width: 275px;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 .equipment-card__title {
   margin: 0;
   margin-bottom: 15px;
 
-  font-family: "Jost", "Arial", sans-serif;
   font-weight: 500;
   font-size: 24px;
   line-height: 29px;
+  font-family: "Jost", "Arial", sans-serif;
   color: $white-color;
   text-decoration: none;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 5px;
+
     font-size: 28px;
     line-height: 34px;
   }
@@ -62,32 +69,34 @@
     text-decoration: underline;
   }
   &:focus-visible {
-    outline: 1px solid $white-color;
     border-radius: 2px;
+    outline: 1px solid $white-color;
   }
   &:active {
     opacity: 0.7;
   }
 }
 .equipment-card__vendors {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
+  margin: 0;
+  margin-bottom: 10px;
+  padding: 0;
+
+  list-style-type: none;
+
   gap: 2px;
 }
-.equipment-card__vendor {
-}
+
 .equipment-card__vendor-link {
   display: inline-flex;
   padding: 2px;
   padding-left: 0;
-  font-family: inherit;
+
   font-weight: 300;
   font-size: 16px;
   line-height: 120%;
+  font-family: inherit;
   color: $white-color;
   text-decoration: none;
 
@@ -95,16 +104,17 @@
     text-decoration: underline;
   }
   &:focus-visible {
-    outline: 1px solid $white-color;
     border-radius: 2px;
+    outline: 1px solid $white-color;
   }
   &:active {
     opacity: 0.7;
   }
 }
 .equipment-card__button {
-  margin-top: auto;
   max-width: 177px;
+  margin-top: auto;
+
   transition: all 0.3s ease;
 
   @media (min-width: $desktop-width) {
@@ -114,12 +124,13 @@
 }
 .equipment-card__image {
   position: absolute;
-  z-index: -1;
-  max-width: none;
-
   top: 10%;
+  z-index: -1;
+
+  max-width: none;
   @media (max-width: $max-tablet-width) {
     left: 40%;
+
     transform: scale(0.8);
   }
   @media (min-width: $desktop-width) {
@@ -127,7 +138,6 @@
   }
 
   &--computers {
-
     // top: 20px;
     // right: 0px
   }
@@ -152,8 +162,9 @@
   &--ups {
     top: 10%;
     @media (max-width: $max-tablet-width) {
-      transform: scale(0.9);
       left: 45%;
+
+      transform: scale(0.9);
     }
     @media (min-width: $desktop-width) {
       left: 45%;
