--- a/src/scss/blocks/modal-image.scss
+++ b/src/scss/blocks/modal-image.scss
@@ -1,15 +1,17 @@
 .modal-image {
   position: fixed;
-  z-index: 10000;
-  left: 0;
   top: 0;
+  left: 0;
+  z-index: 10000;
+
   display: none;
   width: 100%;
   height: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
+  overflow: auto;
+
   background-color: rgba(0,0,0,0.9);
-  overflow: auto
 }
 .modal-image--opened {
   display: flex;
@@ -43,7 +45,6 @@
     transform-origin: center;
 
     transition: background-color 0.3s ease;
-
   }
   &::after {
     transform: translateY(-50%) rotate(-45deg);
@@ -51,8 +52,9 @@
   &:hover {
     &::before,
     &::after {
-      animation: spin 0.7s linear;
       background-color: $button-color;
+
+      animation: spin 0.7s linear;
     }
     &::before {
       animation: spinBefore 0.7s ease-out;
@@ -68,9 +70,9 @@
 .modal-image__content-wrapper {
   display: flex;
   justify-content: center;
-  padding: 0;
-  margin: auto;
   max-width: 100%;
+  margin: auto;
+  padding: 0;
 
   animation-name: zoom;
   animation-duration: 0.6s;
@@ -78,8 +80,4 @@
   @media (min-width: $tablet-width) {
     max-width: 80%;
   }
-}
-.modal-image__content {
-}
-.modal-image__caption {
 }
