--- a/src/scss/blocks/modal.scss
+++ b/src/scss/blocks/modal.scss
@@ -27,8 +27,8 @@
   overflow: hidden;
 
   background-color: #ffffff;
-  border-radius: 1px;;
-  box-shadow: 5px 9px 21px rgba(48, 41, 131, 0.3);
+  border-radius: 1px;
+  box-shadow: 5px 9px 21px rgba(48, 41, 131, 0.3);;
 
   @media (min-width: $tablet-width) {
     width: 577px;
@@ -53,6 +53,7 @@
 .modal__image {
   width: 100%;
   height: 100%;
+
   border-radius: 5px;
 
   object-fit: contain;
@@ -63,13 +64,13 @@
 }
 .modal__title {
   margin: 0;
-  padding: 0;
   margin-bottom: 14px;
+  padding: 0;
 
-  font-family: "Jost", "Arial", sans-serif;
   font-weight: 500;
   font-size: 30px;
   line-height: 110%;
+  font-family: "Jost", "Arial", sans-serif;
   color: $black-color;
 }
 .modal__form {
@@ -79,20 +80,30 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 130%;
-  opacity: 0.7;
   color: $black-color;
+
+  opacity: 0.7;
 }
 .modal__form-textarea {
-  resize: none;
   height: 75px;
+
+  resize: none;
 }
 @keyframes spinAfter {
-  from {transform: translateY(-50%) rotate(-45deg);}
-  to {transform:translateY(-50%) rotate(315deg);}
+  from {
+    transform: translateY(-50%) rotate(-45deg);
+  }
+  to {
+    transform: translateY(-50%) rotate(315deg);
+  }
 }
 @keyframes spinBefore {
-  from {transform: translateY(-50%) rotate(45deg);}
-  to {transform:translateY(-50%) rotate(405deg);}
+  from {
+    transform: translateY(-50%) rotate(45deg);
+  }
+  to {
+    transform: translateY(-50%) rotate(405deg);
+  }
 }
 .modal__close-button {
   position: absolute;
@@ -123,7 +134,6 @@
     transform-origin: center;
 
     transition: background-color 0.3s ease;
-
   }
   &::after {
     transform: translateY(-50%) rotate(-45deg);
@@ -131,8 +141,9 @@
   &:hover {
     &::before,
     &::after {
-      animation: spin 0.7s linear;
       background-color: $button-color;
+
+      animation: spin 0.7s linear;
     }
     &::before {
       animation: spinBefore 0.7s ease-out;
@@ -159,5 +170,4 @@
       max-width: 640px;
     }
   }
-
 }
