--- a/src/scss/blocks/product-page.scss
+++ b/src/scss/blocks/product-page.scss
@@ -31,13 +31,15 @@
 .product-page__header {
   display: flex;
   flex-direction: column;
-  gap: 8px;
   margin-bottom: 20px;
+
+  gap: 8px;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
-    gap: 10px;
     align-items: center;
+
+    gap: 10px;
   }
 
   @media (min-width: $desktop-width) {
@@ -50,15 +52,16 @@
 }
 .product-page__vendor {
   flex-shrink: 0;
+
   pointer-events: none;
 }
 .product-page__slogan {
   margin: 0;
-  padding: 0;
   margin-bottom: 20px;
+  padding: 0;
+
   font-size: 14px;
   line-height: 140%;
-
   text-transform: uppercase;
 
   @media (min-width: $desktop-width) {
@@ -67,9 +70,9 @@
 }
 .product-page__mini-description {
   margin: 0;
+  margin-bottom: 20px;
   padding: 0;
 
-  margin-bottom: 20px;
   font-size: 14px;
   line-height: 130%;
 
@@ -78,10 +81,10 @@
   }
 }
 .product-page__image-wrapper {
-  margin: 0;
-  padding: 0;
   display: flex;
   max-width: 550px;
+  margin: 0;
+  padding: 0;
 
   @media (max-width: $max-tablet-width) {
     width: 100%;
@@ -89,11 +92,9 @@
   }
 
   @media (min-width: $desktop-width) {
-
-    align-items: center;
-
-    margin-left: auto;
     flex-shrink: 0;
+    align-items: center;
+    margin-left: auto;
   }
 }
 .product-page__image {
@@ -103,25 +104,28 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+
   gap: 25px;
 
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
-    gap: 15px;
     align-items: center;
+
+    gap: 15px;
   }
 }
 .product-page__prices {
   display: flex;
-  gap: 10px;
   align-items: center;
+
+  gap: 10px;
 }
 .product-page__price {
-  font-family: "Jost", "Arial", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 23px;
+  font-family: "Jost", "Arial", sans-serif;
 }
 .product-page__credit {
   font-size: 16px;
@@ -131,14 +135,15 @@
 .product-page__toolbar {
   display: flex;
   align-items: center;
+
   gap: 30px;
 
   @media (max-width: $max-mobile-width) {
+    justify-content: space-between;
     order: -1;
     max-width: 500px;
-    justify-content: space-between;
-    margin-left: 15px;
     margin-right: 15px;
+    margin-left: 15px;
   }
 }
 .product-page__button-wrapper {
@@ -150,13 +155,15 @@
   }
 }
 .product-page__availability {
+  margin-right: 35px;
+
   font-size: 14px;
   line-height: 130%;
   color: $grey-color;
-  margin-right: 35px;
 }
 .product-page__button {
   min-width: 130px;
+
   clip-path: none;
 
   @media (max-width: $max-tablet-width) {
@@ -170,47 +177,50 @@
   }
 
   &:hover {
-    background-color: $blue-color;
     color: $white-color;
+
+    background-color: $blue-color;
   }
 }
 
-.product-page__tabs {
-}
+
 .product-page__tabs-list-wrapper {
   background-color: $bg2-color;
 }
 .product-page__tabs-list {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0;
+
+  list-style-type: none;
 
   @media (min-width: $desktop-width) {
     flex-direction: row;
   }
 }
-.product-page__tabs-item {
-}
+
 .product-page__tabs-button {
   padding: 15px 20px;
-  border: none;
-  background-color: transparent;
-  font-family: inherit;
+
   font-size: 14px;
   line-height: 17px;
-  text-decoration: underline;
+  font-family: inherit;
   color: $blue-color;
+  text-decoration: underline;
+
+  background-color: transparent;
+  border: none;
   cursor: pointer;
+
   transition: all 0.3s ease;
 
   &:hover {
     color: $button-color;
   };
   &:focus-visible {
-    outline: 2px solid $blue-color;
     border-radius: 2px;
+    outline: 2px solid $blue-color;
   }
   &:active {
     opacity: 0.7;
@@ -221,14 +231,13 @@
   }
 }
 .product-page__tabs-button.tabs__button--active {
-  background-color: $white-color;
-  text-decoration: none;
   color: inherit;
+  text-decoration: none;
+
+  background-color: $white-color;
 }
-.product-page__panels-wrapper {
-}
-.product-page__panels {
-}
+
+
 .product-page__pannel {
   padding-top: 22px;
   padding-bottom: 45px;
@@ -241,14 +250,16 @@
   margin: 0;
   margin-bottom: 35px;
   padding: 0;
+
   font-weight: 700;
   font-size: 24px;
   line-height: 135%;
 
   @media (min-width: $desktop-width) {
+    margin-bottom: 20px;
+
     font-size: 28px;
     line-height: 115%;
-    margin-bottom: 20px;
   }
 }
 .product-page__panel-highlight {
@@ -259,60 +270,61 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 120%;
-  text-transform: uppercase;
   color: $grey-color;
-
+  text-transform: uppercase;
 }
 .product-page__description-paragraph {
   margin: 0;
   margin-bottom: 25px;
+
   font-size: 14px;
   line-height: 130%;
 }
-.product-page__docs {
-}
+
 .product-page__panel-subtitle {
   margin: 0;
   margin-bottom: 15px;
   padding: 0;
-  font-family: "Jost", "Arial", sans-serif;
+
   font-weight: 500;
   font-size: 20px;
   line-height: 23px;
+  font-family: "Jost", "Arial", sans-serif;
 }
 .product-page__docs-list {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0;
+
+  list-style-type: none;
+
   gap: 10px;
 
   @media (min-width: $desktop-width) {
     flex-direction: row;
-    gap: 30px;
     flex-wrap: wrap;
+
+    gap: 30px;
   }
 }
-.product-page__docs-item {
-}
-.product-page__docs-link {
-}
+
+
 .product-page__charachteristics {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0;
+
+  list-style-type: none;
 }
-.product-page__charachteristics-item {
-}
+
 .product-page__charachteristics-list {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 15px 0;
 
-  display: flex;
-  flex-direction: column;
   gap: 15px;
 
   @media (min-width: $desktop-width) {
@@ -321,9 +333,9 @@
   }
 }
 .product-page__charachteristics-name {
+  flex-shrink: 0;
   margin: 0;
   padding: 0;
-  flex-shrink: 0;
 
   font-weight: 700;
   font-size: 14px;
@@ -344,6 +356,7 @@
   display: block;
   margin: 0;
   padding: 0;
+
   font-size: 13px;
   line-height: 130%;
   color: $grey-color;
@@ -356,19 +369,21 @@
   line-height: 130%;
 }
 .product-page__models-list {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
-  list-style-type: none;
 
-  display: flex;
-  flex-direction: column;
+  list-style-type: none;
 }
 .product-page__models-item {
-  padding: 15px 0;
   display: flex;
   flex-direction: column;
+  padding: 15px 0;
+
+  box-shadow: 0 -1px 0 #eeeeee;
+
   gap: 20px;
-  box-shadow: 0px -1px 0px #EEEEEE;
 
   @media (min-width: $desktop-width) {
     flex-direction: row;
@@ -378,12 +393,11 @@
 .product-page__model-link {
   flex-shrink: 0;
   @media (min-width: $desktop-width) {
-    width: 275px;
     justify-content: center;
+    width: 275px;
   }
 }
 .product-page__model-about {
   margin: 0;
   padding: 0;
-
 }
