--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -24,16 +24,28 @@ picture {
 }
 
 @keyframes spinAfter {
-  from {transform: translateY(-50%) rotate(-45deg);}
-  to {transform:translateY(-50%) rotate(315deg);}
+  from {
+    transform: translateY(-50%) rotate(-45deg);
+  }
+  to {
+    transform: translateY(-50%) rotate(315deg);
+  }
 }
 
 @keyframes spinBefore {
-  from {transform: translateY(-50%) rotate(45deg);}
-  to {transform:translateY(-50%) rotate(405deg);}
+  from {
+    transform: translateY(-50%) rotate(45deg);
+  }
+  to {
+    transform: translateY(-50%) rotate(405deg);
+  }
 }
 
 @keyframes zoom {
-  from {transform:scale(0)}
-  to {transform:scale(1)}
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
 }
