--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -11,7 +11,7 @@ $primary-color: #453fa9;
 $button-color: #ff8000;
 $bg-color: #453fa9;
 $bg2-color: #f7f7fd;
-$white-color: #ffffff;
+$white-color: #fff;
 $black-color: #232323;
 $grey-color: #818181;
 $aqua-color: #2aa898;
