--- a/src/scss/blocks/button.scss
+++ b/src/scss/blocks/button.scss
@@ -1,4 +1,5 @@
 $button-height: 47;
+
 .button {
   position: relative;
 
@@ -12,7 +13,7 @@ $button-height: 47;
   font-size: 14px;
   line-height: 17px;
   font-family: inherit;
-  color: #ffffff;
+  color: #fff;
   text-decoration: none;
 
   background-color: $button-color;
@@ -24,12 +25,14 @@ $button-height: 47;
   &:hover {
     color: $button-color;
 
-    background-color: #ffffff;
+    background-color: #fff;
   }
+
   &:focus-visible {
     outline: none;
     outline: 2px solid $blue-color;
   }
+
   &:active {
     opacity: 0.7;
   }
