--- a/src/scss/blocks/contacts.scss
+++ b/src/scss/blocks/contacts.scss
@@ -1,4 +1,3 @@
-
 .contacts__container {
   @media (max-width: $max-mobile-width) {
     padding-bottom: 265px;
@@ -8,6 +7,7 @@
     background-position: -115px calc(100% + 240px);
   }
 }
+
 .contacts__content {
   display: flex;
   flex-direction: column;
@@ -20,7 +20,6 @@
     background-repeat: no-repeat;
     background-position: 0 calc(100% + 240px);
   }
-
   @media (min-width: $desktop-width) {
     flex-direction: row;
     justify-content: space-between;
@@ -29,6 +28,7 @@
     background-position: 0 calc(100% + 105px);
   }
 }
+
 .contacts__contacts {
   display: flex;
   flex-shrink: 0;
@@ -41,9 +41,10 @@
     padding: 0 $paddings-mobile;
     padding-bottom: 30px;
 
-    background-color: $bg2-color;;
+    background-color: $bg2-color;
   }
 }
+
 .contacts__title {
   margin-bottom: 25px;
   padding-top: 30px;
@@ -52,12 +53,14 @@
     margin-bottom: 35px;
   }
 }
+
 .contacts__items-wrapper {
   display: flex;
   flex-direction: column;
 
   gap: 25px;
 }
+
 .contacts__phone-mail {
   display: flex;
   flex-wrap: wrap;
@@ -65,6 +68,7 @@
 
   gap: 30px;
 }
+
 .contacts__item {
   display: flex;
   align-items: center;
@@ -89,15 +93,19 @@
     background-size: contain;
   }
 }
+
 a.contacts__item {
   transition: all 0.3s ease;
+
   &:hover {
     color: $button-color;
   }
+
   &:active {
     opacity: 0.7;
   }
 }
+
 .contacts__item--phone {
   &::before {
     width: 21px;
@@ -106,6 +114,7 @@ a.contacts__item {
     background-image: url("@img/icons/contacts-phone.svg");
   }
 }
+
 .contacts__item--mail {
   &::before {
     width: 24px;
@@ -114,6 +123,7 @@ a.contacts__item {
     background-image: url("@img/icons/contacts-mail.svg");
   }
 }
+
 .contacts__item--time {
   &::before {
     width: 24px;
@@ -122,6 +132,7 @@ a.contacts__item {
     background-image: url("@img/icons/contacts-clock.svg");
   }
 }
+
 .contacts__item--address {
   &::before {
     width: 16px;
@@ -135,6 +146,7 @@ a.contacts__item {
   display: flex;
   flex-shrink: 0;
   flex-direction: column;
+
   @media (min-width: $desktop-width) {
     width: 500px;
     margin-right: 35px;
@@ -164,21 +176,20 @@ a.contacts__item {
 
     clip-path: polygon(0 100%, 100% 100%, 100% 0, 0 50px);
   }
-
   @media (min-width: $tablet-width) {
     margin-top: -240px;
 
     clip-path: polygon(0 100%, 100% 100%, 100% 145px, 62vw 0, 0 145px);
   }
-
   @media (min-width: $desktop-width) {
     z-index: 1;
 
     margin-top: -230px;
 
-    clip-path: polygon(0 100%, 100% 100%, 100% 175px, 62vw 0, 0 175px);;
+    clip-path: polygon(0 100%, 100% 100%, 100% 175px, 62vw 0, 0 175px);
   }
 }
+
 .contacts__map iframe {
   width: 100%;
 
@@ -187,7 +198,6 @@ a.contacts__item {
   @media (min-width: $tablet-width) {
     height: 600px;
   }
-
   @media (min-width: $desktop-width) {
     width: 100%;
     height: 843px;
