--- a/src/scss/blocks/form.scss
+++ b/src/scss/blocks/form.scss
@@ -4,6 +4,7 @@
 
   gap: 30px;
 }
+
 .form__row {
   display: flex;
   flex-direction: column;
@@ -14,6 +15,7 @@
     flex-direction: row;
   }
 }
+
 .form__label {
   position: relative;
 
@@ -23,11 +25,13 @@
 
   gap: 4px;
 }
+
 .form__label-text {
   font-size: 14px;
   line-height: 130%;
-  color: #ffffff;
+  color: #fff;
 }
+
 .form__field {
   padding: 11px 12px;
 
@@ -37,29 +41,34 @@
 
   background-color: #ebf3f8;
   border: none;
-  box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: inset 1px 1px 0 rgb(0 0 0 / 15%);
 
   &:hover,
   &:focus {
     outline: 2px solid $blue-color;
   }
 }
+
 .form__field--textarea {
   height: 75px;
 
   resize: none;
 }
+
 .form__submit-button {
   max-width: 206px;
+
   @media (max-width: $max-mobile-width) {
     max-width: 95%;
   }
+
   &:hover {
     color: $white-color;
 
     background-color: $blue-color;
   }
 }
+
 .form__error-message {
   position: absolute;
   bottom: 0;
@@ -97,9 +106,11 @@
       outline: 2px solid $blue-color;
     }
   }
+
   &.is-focused {
     outline: 2px solid $blue-color;
   }
+
   &.is-flipped {
     & .form-choices__list[aria-expanded],
     & .form-choices__list--dropdown {
@@ -111,7 +122,8 @@
     }
   }
 }
-.form-choices[data-type*=select-one]::after {
+
+.form-choices[data-type*="select-one"]::after {
   content: "";
   position: absolute;
   top: 50%;
@@ -123,15 +135,17 @@
 
   border-width: 5px;
   border-style: solid;
-  border-color: #333333 transparent transparent;
+  border-color: #333 transparent transparent;
 
   pointer-events: none;
 }
-.is-open.form-choices[data-type*=select-one]::after {
+
+.is-open.form-choices[data-type*="select-one"]::after {
   margin-top: -7.5px;
 
-  border-color: transparent transparent #333333;
+  border-color: transparent transparent #333;
 }
+
 .form-choices__inner {
   width: 100%;
   overflow: hidden;
@@ -142,13 +156,14 @@
 
   background-color: #ebf3f8;
   border: none;
-  box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: inset 1px 1px 0 rgb(0 0 0 / 15%);
 
   & .is-open,
   & .is-focused {
     border: 1px solid $blue-color;
   }
 }
+
 .form-choices__item {
   position: relative;
 
@@ -175,6 +190,7 @@
       transform: translateY(-50%);
     }
   }
+
   &[data-value="Telegram"] {
     &::before {
       content: "";
@@ -191,6 +207,7 @@
       transform: translateY(-50%);
     }
   }
+
   &[data-value="Телефон"] {
     &::before {
       content: "";
@@ -208,12 +225,14 @@
     }
   }
 }
+
 .form-choices__list {
   margin: 0;
   padding: 0;
 
   list-style-type: none;
 }
+
 .form-choices__list[aria-expanded],
 .form-choices__list--dropdown {
   position: absolute;
@@ -227,7 +246,7 @@
   word-break: break-all;
 
   background-color: $white-color;
-  border-width: 0 1px 1px 1px;
+  border-width: 0 1px 1px;
   border-style: solid;
   border-color: #bbbbbc;
   visibility: hidden;
@@ -238,6 +257,7 @@
     visibility: visible;
   }
 }
+
 .form-choices__list--dropdown {
   & .form-choices__item {
     padding-left: 47px;
