--- a/src/scss/blocks/menu.scss
+++ b/src/scss/blocks/menu.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   overflow: hidden;
 
-  color: #ffffff;
+  color: #fff;
 
   background: linear-gradient(180deg, #453fa9 0%, #675fc6 100%);
 
@@ -15,11 +15,13 @@
     background: none;
   }
 }
+
 .menu--no-js {
   @media (max-width: $desktop-width) {
     display: flex;
   }
 }
+
 .menu--opened {
   @media (max-width: $desktop-width) {
     position: absolute;
@@ -33,6 +35,7 @@
     padding-left: 18px;
   }
 }
+
 .menu__main {
   margin-bottom: 25px;
 
@@ -40,6 +43,7 @@
     margin-bottom: 0;
   }
 }
+
 .menu__list {
   margin: 0;
   padding: 0;
@@ -55,6 +59,7 @@
     gap: 12px;
   }
 }
+
 .menu__item {
   @media (max-width: $max-tablet-width) {
     position: relative;
@@ -68,7 +73,7 @@
 
       height: 1px;
 
-      background-color: rgba(245, 245, 245, 0.51);
+      background-color: rgb(245 245 245 / 51%);
     }
 
     &::before {
@@ -80,20 +85,23 @@
 
       height: 1px;
 
-      background-color: rgba(245, 245, 245, 0.51);
+      background-color: rgb(245 245 245 / 51%);
     }
   }
 }
+
 .menu__item--desktop-hidden {
   @media (min-width: $desktop-width) {
     display: none;
   }
 }
+
 .menu__item--configurator {
   @media (min-width: $desktop-width) {
     margin-left: 25px;
   }
 }
+
 .menu__link {
   @media (max-width: $max-tablet-width) {
     position: relative;
@@ -129,7 +137,7 @@
     font-weight: 600;
     font-size: 13px;
     line-height: 16px;
-    color: #ffffff;
+    color: #fff;
     text-decoration: none;
 
     transition: color 0.3s ease;
@@ -139,11 +147,13 @@
     }
   }
 }
+
 .menu__link--end {
   &::after {
     content: none;
   }
 }
+
 .menu__sub {
   position: fixed;
   top: 0;
@@ -151,6 +161,7 @@
 
   display: none;
 }
+
 .menu__sub--active {
   z-index: 1;
 
@@ -165,6 +176,7 @@
 
   animation: showing-animation 0.3s forwards;
 }
+
 .menu__back-button {
   position: relative;
 
@@ -195,6 +207,7 @@
     transform: translateY(-50%) rotate(180deg);
   }
 }
+
 .menu__link--configurator {
   @media (min-width: $desktop-width) {
     display: inline-flex;
@@ -212,12 +225,13 @@
     transition: background-color 0.3s ease;
 
     &:hover {
-      color: #ffffff;
+      color: #fff;
 
       background-color: $button-color;
     }
   }
 }
+
 .menu__contacts {
   display: flex;
   flex-direction: column;
@@ -228,6 +242,7 @@
     display: none;
   }
 }
+
 .menu__phone {
   display: block;
 
@@ -236,6 +251,7 @@
   color: inherit;
   text-decoration: none;
 }
+
 .menu__mail {
   display: block;
   margin-bottom: 28px;
@@ -245,6 +261,7 @@
   color: inherit;
   text-decoration: none;
 }
+
 .menu__back-call-button {
   max-width: calc(100% + 18px);
   height: 65px;
