--- a/src/scss/blocks/modal-image.scss
+++ b/src/scss/blocks/modal-image.scss
@@ -11,11 +11,13 @@
   padding-bottom: 50px;
   overflow: auto;
 
-  background-color: rgba(0,0,0,0.9);
+  background-color: rgb(0 0 0 / 90%);
 }
+
 .modal-image--opened {
   display: flex;
 }
+
 .modal-image__close-button {
   position: absolute;
   top: 10px;
@@ -46,9 +48,11 @@
 
     transition: background-color 0.3s ease;
   }
+
   &::after {
     transform: translateY(-50%) rotate(-45deg);
   }
+
   &:hover {
     &::before,
     &::after {
@@ -56,17 +60,21 @@
 
       animation: spin 0.7s linear;
     }
+
     &::before {
       animation: spinBefore 0.7s ease-out;
     }
+
     &::after {
       animation: spinAfter 0.7s ease-out;
     }
   }
+
   &:active {
     opacity: 0.7;
-  };
+  }
 }
+
 .modal-image__content-wrapper {
   display: flex;
   justify-content: center;
