--- a/src/scss/blocks/modal.scss
+++ b/src/scss/blocks/modal.scss
@@ -7,13 +7,15 @@
   height: 100%;
   overflow: auto;
 
-  background-color: rgba(0,0,0,0.6);
+  background-color: rgb(0 0 0 / 60%);
 
   animation: showing-animation 0.3s ease;
 }
+
 .modal--opened {
   display: flex;
 }
+
 .modal__wrapper {
   position: relative;
   z-index: 1;
@@ -26,30 +28,32 @@
   padding: 70px 20px;
   overflow: hidden;
 
-  background-color: #ffffff;
+  background-color: #fff;
   border-radius: 1px;
-  box-shadow: 5px 9px 21px rgba(48, 41, 131, 0.3);;
+  box-shadow: 5px 9px 21px rgb(48 41 131 / 30%);
 
   @media (min-width: $tablet-width) {
     width: 577px;
-    padding: 48px 45px 50px 45px;
+    padding: 48px 45px 50px;
   }
-
   @media (min-width: $desktop-width) {
     width: 1026px;
     max-width: 1026px;
   }
 }
+
 .modal__image-wrapper {
   position: relative;
 
   flex-shrink: 0;
   width: 400px;
   margin-right: 43px;
+
   @media (max-width: $max-tablet-width) {
     display: none;
   }
 }
+
 .modal__image {
   width: 100%;
   height: 100%;
@@ -58,10 +62,12 @@
 
   object-fit: contain;
 }
+
 .modal__content {
   display: flex;
   flex-direction: column;
 }
+
 .modal__title {
   margin: 0;
   margin-bottom: 14px;
@@ -73,9 +79,11 @@
   font-family: "Jost", "Arial", sans-serif;
   color: $black-color;
 }
+
 .modal__form {
   gap: 20px;
 }
+
 .modal__label-text {
   font-weight: 400;
   font-size: 14px;
@@ -84,15 +92,18 @@
 
   opacity: 0.7;
 }
+
 .modal__form-textarea {
   height: 75px;
 
   resize: none;
 }
+
 @keyframes spinAfter {
   from {
     transform: translateY(-50%) rotate(-45deg);
   }
+
   to {
     transform: translateY(-50%) rotate(315deg);
   }
@@ -101,10 +112,12 @@
   from {
     transform: translateY(-50%) rotate(45deg);
   }
+
   to {
     transform: translateY(-50%) rotate(405deg);
   }
 }
+
 .modal__close-button {
   position: absolute;
   top: 10px;
@@ -135,9 +148,11 @@
 
     transition: background-color 0.3s ease;
   }
+
   &::after {
     transform: translateY(-50%) rotate(-45deg);
   }
+
   &:hover {
     &::before,
     &::after {
@@ -145,16 +160,19 @@
 
       animation: spin 0.7s linear;
     }
+
     &::before {
       animation: spinBefore 0.7s ease-out;
     }
+
     &::after {
       animation: spinAfter 0.7s ease-out;
     }
   }
+
   &:active {
     opacity: 0.7;
-  };
+  }
 }
 
 .modal__product-name {
