--- a/src/scss/blocks/nav.scss
+++ b/src/scss/blocks/nav.scss
@@ -1,4 +1,3 @@
-
 .nav__list {
   display: flex;
   flex-direction: column;
@@ -10,12 +9,12 @@
   @media (min-width: $desktop-width) {
     flex-direction: row;
   }
-
   @media (max-width: $max-tablet-width) {
     gap: 3px;
   }
   // gap: 26px;
 }
+
 .nav__item {
   & .nav__link {
     padding-left: 0;
@@ -23,8 +22,10 @@
 
   @media (min-width: $desktop-width) {
     margin-right: 26px;
+
     &:first-of-type {
       margin-right: 75px;
+
       & .nav__link {
         padding-left: 0;
       }
@@ -32,6 +33,7 @@
 
     &:last-of-type {
       margin-right: 0;
+
       & .nav__link {
         padding-right: 0;
       }
@@ -42,12 +44,13 @@
     }
   }
 }
+
 .nav__link {
   padding: 3px;
 
   font-weight: 600;
   font-size: 16px;
-  color: #000000;
+  color: #000;
   text-decoration: none;
 
   transition: color 0.3s ease;
@@ -55,10 +58,12 @@
   &:hover {
     color: $blue-color;
   }
+
   &:active {
     opacity: 0.7;
   }
 }
+
 .nav__sub-list {
   display: flex;
   flex-direction: column;
@@ -82,6 +87,7 @@
   &:hover {
     color: $blue-color;
   }
+
   &:active {
     opacity: 0.7;
   }
@@ -97,7 +103,7 @@
   font-weight: 700;
   font-size: 13px;
   line-height: 16px;
-  color: #ffffff;
+  color: #fff;
   text-transform: none;
   text-decoration: none;
 
@@ -109,6 +115,7 @@
   &:hover {
     background-color: $blue-color;
   }
+
   &:active {
     opacity: 0.7;
   }
