--- a/src/scss/blocks/need-help.scss
+++ b/src/scss/blocks/need-help.scss
@@ -8,6 +8,7 @@
     padding: 70px 0;
   }
 }
+
 .need-help__content {
   display: flex;
   flex-direction: column;
@@ -17,6 +18,7 @@
     justify-content: space-between;
   }
 }
+
 .need-help__left {
   display: flex;
   flex-direction: column;
@@ -25,6 +27,7 @@
     padding-top: 18px;
   }
 }
+
 .need-help__title {
   font-weight: 600;
   font-size: 24px;
@@ -39,6 +42,7 @@
     font-family: "Proxima Nova", "Arial", sans-serif;
   }
 }
+
 .need-help__image-wrapper {
   @media (max-width: $max-mobile-width) {
     margin-left: -250px;
@@ -57,9 +61,10 @@
     padding: 32px 53px 43px 61px;
 
     background-color: $white-color;
-    box-shadow: 5px 9px 21px rgba(48, 41, 131, 0.3);
+    box-shadow: 5px 9px 21px rgb(48 41 131 / 30%);
   }
 }
+
 .need-help__form-title {
   margin: 0;
   margin-bottom: 15px;
