--- a/src/scss/blocks/product-page.scss
+++ b/src/scss/blocks/product-page.scss
@@ -1,6 +1,7 @@
 .product-page {
   color: #2a2a2a;
 }
+
 .product-page__main {
   padding-top: 15px;
   padding-bottom: 35px;
@@ -12,10 +13,12 @@
     padding-bottom: 40px;
   }
 }
+
 .product-page__content {
   display: flex;
   flex-direction: column;
 }
+
 .product-page__main-top {
   display: flex;
   flex-direction: column;
@@ -24,10 +27,12 @@
     flex-direction: row;
   }
 }
+
 .product-page__text-content {
   display: flex;
   flex-direction: column;
 }
+
 .product-page__header {
   display: flex;
   flex-direction: column;
@@ -41,20 +46,22 @@
 
     gap: 10px;
   }
-
   @media (min-width: $desktop-width) {
     margin-bottom: 25px;
   }
 }
+
 .product-page__title {
   margin: 0;
   padding: 0;
 }
+
 .product-page__vendor {
   flex-shrink: 0;
 
   pointer-events: none;
 }
+
 .product-page__slogan {
   margin: 0;
   margin-bottom: 20px;
@@ -68,6 +75,7 @@
     margin-bottom: 35px;
   }
 }
+
 .product-page__mini-description {
   margin: 0;
   margin-bottom: 20px;
@@ -80,6 +88,7 @@
     margin-bottom: 35px;
   }
 }
+
 .product-page__image-wrapper {
   display: flex;
   max-width: 550px;
@@ -90,16 +99,17 @@
     width: 100%;
     margin-bottom: 20px;
   }
-
   @media (min-width: $desktop-width) {
     flex-shrink: 0;
     align-items: center;
     margin-left: auto;
   }
 }
+
 .product-page__image {
   object-fit: contain;
 }
+
 .product-page__main-bottom {
   display: flex;
   flex-direction: column;
@@ -115,23 +125,27 @@
     gap: 15px;
   }
 }
+
 .product-page__prices {
   display: flex;
   align-items: center;
 
   gap: 10px;
 }
+
 .product-page__price {
   font-weight: 500;
   font-size: 20px;
   line-height: 23px;
   font-family: "Jost", "Arial", sans-serif;
 }
+
 .product-page__credit {
   font-size: 16px;
   line-height: 19px;
   color: $grey-color;
 }
+
 .product-page__toolbar {
   display: flex;
   align-items: center;
@@ -146,6 +160,7 @@
     margin-left: 15px;
   }
 }
+
 .product-page__button-wrapper {
   display: flex;
   align-items: center;
@@ -154,6 +169,7 @@
     margin-left: auto;
   }
 }
+
 .product-page__availability {
   margin-right: 35px;
 
@@ -161,6 +177,7 @@
   line-height: 130%;
   color: $grey-color;
 }
+
 .product-page__button {
   min-width: 130px;
 
@@ -187,6 +204,7 @@
 .product-page__tabs-list-wrapper {
   background-color: $bg2-color;
 }
+
 .product-page__tabs-list {
   display: flex;
   flex-direction: column;
@@ -217,11 +235,13 @@
 
   &:hover {
     color: $button-color;
-  };
+  }
+
   &:focus-visible {
     border-radius: 2px;
     outline: 2px solid $blue-color;
   }
+
   &:active {
     opacity: 0.7;
   }
@@ -230,6 +250,7 @@
     width: 100%;
   }
 }
+
 .product-page__tabs-button.tabs__button--active {
   color: inherit;
   text-decoration: none;
@@ -246,6 +267,7 @@
     padding-top: 45px;
   }
 }
+
 .product-page__pannel-title {
   margin: 0;
   margin-bottom: 35px;
@@ -262,6 +284,7 @@
     line-height: 115%;
   }
 }
+
 .product-page__panel-highlight {
   margin: 0;
   margin-bottom: 20px;
@@ -273,6 +296,7 @@
   color: $grey-color;
   text-transform: uppercase;
 }
+
 .product-page__description-paragraph {
   margin: 0;
   margin-bottom: 25px;
@@ -291,6 +315,7 @@
   line-height: 23px;
   font-family: "Jost", "Arial", sans-serif;
 }
+
 .product-page__docs-list {
   display: flex;
   flex-direction: column;
@@ -332,6 +357,7 @@
     align-items: center;
   }
 }
+
 .product-page__charachteristics-name {
   flex-shrink: 0;
   margin: 0;
@@ -345,6 +371,7 @@
     width: 255px;
   }
 }
+
 .product-page__charachteristics-value {
   margin: 0;
   padding: 0;
@@ -352,6 +379,7 @@
   font-size: 16px;
   line-height: 130%;
 }
+
 .product-page__charachteristics-star {
   display: block;
   margin: 0;
@@ -361,6 +389,7 @@
   line-height: 130%;
   color: $grey-color;
 }
+
 .product-page__copyright {
   margin: 0;
   padding: 0;
@@ -368,6 +397,7 @@
   font-size: 14px;
   line-height: 130%;
 }
+
 .product-page__models-list {
   display: flex;
   flex-direction: column;
@@ -376,12 +406,13 @@
 
   list-style-type: none;
 }
+
 .product-page__models-item {
   display: flex;
   flex-direction: column;
   padding: 15px 0;
 
-  box-shadow: 0 -1px 0 #eeeeee;
+  box-shadow: 0 -1px 0 #eee;
 
   gap: 20px;
 
@@ -390,13 +421,16 @@
     align-items: center;
   }
 }
+
 .product-page__model-link {
   flex-shrink: 0;
+
   @media (min-width: $desktop-width) {
     justify-content: center;
     width: 275px;
   }
 }
+
 .product-page__model-about {
   margin: 0;
   padding: 0;
