--- a/src/scss/blocks/vendors.scss
+++ b/src/scss/blocks/vendors.scss
@@ -9,13 +9,16 @@
     padding-bottom: 90px;
   }
 }
+
 .vendors__content {
   display: flex;
   flex-direction: column;
 }
+
 .vendors__title {
   margin-bottom: 15px;
 }
+
 .vendors__description {
   margin: 0;
   margin-bottom: 20px;
@@ -30,6 +33,7 @@
     margin-bottom: 35px;
   }
 }
+
 .vendors__list {
   display: flex;
   flex-direction: column;
@@ -48,7 +52,6 @@
     grid-template-columns: repeat(2, 1fr);
     row-gap: 22px;
   }
-
   @media (min-width: $desktop-width) {
     display: grid;
 
@@ -75,7 +78,7 @@
 
   background-color: $white-color;
   border-radius: 10px;
-  box-shadow: 4px 4px 11px rgba(0, 0, 0, 0.05);
+  box-shadow: 4px 4px 11px rgb(0 0 0 / 5%);
 
   // &::after {
   //   content: "";
@@ -103,18 +106,22 @@
     //   opacity: 1;
     // }
   }
+
   &:focus-visible {
     outline: 2px solid $blue-color;
   }
+
   &:active {
     opacity: 0.7;
   }
 }
+
 .vendors__company-logo {
   max-width: 100%;
 
   object-fit: contain;
 }
+
 .vendors__company-about {
   margin: 0;
   padding: 0;
