сделал шапку для главной с картинкой + очередные правки стайллинта

--- a/src/scss/blocks/burger.scss
+++ b/src/scss/blocks/burger.scss
@@ -23,8 +23,8 @@
 
     height: 2px;
 
-    background-color: #fff;
-    box-shadow: 0 8px 0 0 #fff, 0 16px 0 0 #fff;
+    background-color: #ffffff;
+    box-shadow: 0 8px 0 0 #ffffff, 0 16px 0 0 #ffffff;
   }
 
   &:active {
@@ -49,7 +49,7 @@
 
     height: 2px;
 
-    background-color: #fff;
+    background-color: #ffffff;
     box-shadow: none;
 
     transition: transform 0.5s ease;
