--- a/src/scss/blocks/page-header.scss
+++ b/src/scss/blocks/page-header.scss
@@ -68,7 +68,7 @@
     font-size: 20px;
     line-height: 29px;
     font-family: "Jost", "Arial", sans-serif;
-    color: #fff;
+    color: #ffffff;
 
     transition: color 0.3s ease;
 
@@ -83,7 +83,7 @@
     }
 
     & .page-header__phone-icon-wrapper {
-      background-color: #fff;
+      background-color: #ffffff;
     }
 
     & .page-header__phone-icon {
@@ -99,7 +99,7 @@
   width: 44px;
   height: 44px;
 
-  background-color: #fff;
+  background-color: #ffffff;
 
   transition: background-color 0.3s ease;
 
@@ -115,7 +115,7 @@
 .page-header__phone-icon {
   transition: fill 0.3s ease;
 
-  fill: #fff;
+  fill: #ffffff;
 
   @media (max-width: $max-tablet-width) {
     width: 27px;
@@ -140,7 +140,7 @@
   & span {
     font-size: 13px;
     line-height: 16px;
-    color: #fff;
+    color: #ffffff;
 
     transition: color 0.3s ease;
 
@@ -161,5 +161,17 @@
     & .page-header__mail-icon {
       fill: $button-color;
     }
+  }
+}
+
+.page-header--index {
+  padding-bottom: 0;
+
+  @media (min-width: $tablet-width) {
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 30% 100%, 0 calc(90%));
+  }
+
+  @media (min-width: $desktop-width) {
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 30% 100%, 0 calc(85%));
   }
 }
