--- a/src/scss/blocks/product-page.scss
+++ b/src/scss/blocks/product-page.scss
@@ -412,7 +412,7 @@
   flex-direction: column;
   padding: 15px 0;
 
-  box-shadow: 0 -1px 0 #eee;
+  box-shadow: 0 -1px 0 #eeeeee;
 
   gap: 20px;
 
