--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -60,3 +60,4 @@
 @import "./blocks/cards-list.scss";
 @import "./blocks/vendor.scss";
 @import "./blocks/comparison.scss";
+@import "./blocks/index-header.scss";
