--- a/src/scss/blocks/button.scss
+++ b/src/scss/blocks/button.scss
@@ -7,13 +7,13 @@ $button-height: 47;
   justify-content: center;
   align-items: center;
   max-width: 290px;
-  height: $button-height +px;
+  height: $button-height + px;
   margin: 0;
 
   font-size: 14px;
   line-height: 17px;
   font-family: inherit;
-  color: #fff;
+  color: #ffffff;
   text-decoration: none;
 
   background-color: $button-color;
@@ -25,11 +25,10 @@ $button-height: 47;
   &:hover {
     color: $button-color;
 
-    background-color: #fff;
+    background-color: #ffffff;
   }
 
   &:focus-visible {
-    outline: none;
     outline: 2px solid $blue-color;
   }
 
