--- a/src/scss/blocks/form.scss
+++ b/src/scss/blocks/form.scss
@@ -29,7 +29,7 @@
 .form__label-text {
   font-size: 14px;
   line-height: 130%;
-  color: #fff;
+  color: #ffffff;
 }
 
 .form__field {
@@ -135,7 +135,7 @@
 
   border-width: 5px;
   border-style: solid;
-  border-color: #333 transparent transparent;
+  border-color: #333333 transparent transparent;
 
   pointer-events: none;
 }
@@ -143,7 +143,7 @@
 .is-open.form-choices[data-type*="select-one"]::after {
   margin-top: -7.5px;
 
-  border-color: transparent transparent #333;
+  border-color: transparent transparent #333333;
 }
 
 .form-choices__inner {
