--- a/src/scss/blocks/modal.scss
+++ b/src/scss/blocks/modal.scss
@@ -28,7 +28,7 @@
   padding: 70px 20px;
   overflow: hidden;
 
-  background-color: #fff;
+  background-color: #ffffff;
   border-radius: 1px;
   box-shadow: 5px 9px 21px rgb(48 41 131 / 30%);
 
