--- a/src/scss/blocks/nav.scss
+++ b/src/scss/blocks/nav.scss
@@ -50,7 +50,7 @@
 
   font-weight: 600;
   font-size: 16px;
-  color: #000;
+  color: #000000;
   text-decoration: none;
 
   transition: color 0.3s ease;
@@ -103,7 +103,7 @@
   font-weight: 700;
   font-size: 13px;
   line-height: 16px;
-  color: #fff;
+  color: #ffffff;
   text-transform: none;
   text-decoration: none;
 
