--- a/src/views/header.j2
+++ b/src/views/header.j2
@@ -1,4 +1,8 @@
+{% if (page != "index") %}
 <header class="page-header">
+{% else %}
+<header class="page-header page-header--index">
+{% endif %}
   <div class="page-header__container container">
     <div class="page-header__row">
       <a class="page-header__logo logo" href="./index.html" >
@@ -79,5 +83,11 @@
         </button>
       </div>
     </div>
+    {% if (page == "index") %}
+      <div class="index-header">
+        <h1 class="index-header__title">Поставляем <span>оборудование</span>, внедряем <span>IT-решения</span></h1>
+        <button class="button index-header__button" type="button">Получить консультацию</button>
+      </div>
+    {% endif%}
   </div>
 </header>
