Поправил мобильную версию шапки с картинкой на главной странице

--- a/src/views/header.j2
+++ b/src/views/header.j2
@@ -85,7 +85,7 @@
     </div>
     {% if (page == "index") %}
       <div class="index-header">
-        <h1 class="index-header__title">Поставляем <span>оборудование</span>, внедряем <span>IT-решения</span></h1>
+        <h1 class="index-header__title">Поставляем <span>оборудование</span>, внедряем <span>IT&#8209;решения</span></h1>
         <button class="button index-header__button" type="button">Получить консультацию</button>
       </div>
     {% endif%}
