--- a/src/scss/blocks/index-header.scss
+++ b/src/scss/blocks/index-header.scss
@@ -1,18 +1,25 @@
 .index-header {
+  position: relative;
   display: flex;
   flex-direction: column;
   padding-top: 30px;
+  min-height: 580px;
+  overflow: hidden;
+  background-image: url("@img/index-header-bg.png");
+  background-repeat: no-repeat;
+  background-position: -100px 70px;
 
   @media (max-width: $max-mobile-width) {
     padding-bottom: 20px;
+    margin: 0 - $paddings-mobile;
+    padding-left: $paddings-mobile;
+    padding-right: $paddings-mobile;
   }
 
   @media (min-width: $tablet-width) {
     min-height: 510px;
     padding-top: 40px;
 
-    background-image: url("@img/index-header-bg.png");
-    background-repeat: no-repeat;
     background-position: calc(50% - 50px) 100%;
     background-size: 90%;
   }
@@ -27,20 +34,19 @@
 }
 
 .index-header__title {
+  z-index: 1;
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   padding: 0;
 
   font-weight: 600;
-  font-size: 22px;
+  font-size: 32px;
   line-height: 110%;
   font-family: "Jost", "Arial", sans-serif;
   color: $white-color;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 40px;
-
-    font-size: 32px;
   }
 
   @media (min-width: $desktop-width) {
@@ -65,6 +71,7 @@
 }
 
 .index-header__button {
+  z-index: 1;
   max-width: none;
   padding: 0 25px;
 
