сделал блок решаем задачи под ключ + переделал аналогичный на странице импортозамещения

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,6 +35,7 @@
 @import "./blocks/case-card.scss";
 @import "./blocks/completed-projects.scss";
 @import "./blocks/other-projects.scss";
+@import "./blocks/features.scss";
 @import "./blocks/feature.scss";
 @import "./blocks/about.scss";
 @import "./blocks/team.scss";
@@ -52,7 +53,6 @@
 @import "./blocks/need-help.scss";
 @import "./blocks/equipment-card.scss";
 @import "./blocks/import-replacement.scss";
-@import "./blocks/import-features.scss";
 @import "./blocks/filter.scss";
 @import "./blocks/product-card.scss";
 @import "./blocks/catalog.scss";
