--- a/src/views/blocks/import-features.j2
+++ b/src/views/blocks/import-features.j2
@@ -1,19 +1,19 @@
-<section class="import-features">
+<section class="features features--import-replacement">
   <div class="container">
-    <ul class="import-features__list">
-      <li class="import-features__item feature feature--currency">
+    <ul class="features__list">
+      <li class="feature feature--currency">
         <p class="feature__title">Цены не привязаны к&nbsp;иностранным валютам</p>
         <p class="feature__desription">Небольшой текст от преимуществе в рамках спецификации современных стандартов, ключевые особенности</p>
       </li>
-      <li class="import-features__item feature feature--warranty">
+      <li class="feature feature--warranty">
         <p class="feature__title">Официальная гарантия от отечественного производителя</p>
         <p class="feature__desription">Небольшой текст от преимуществе в рамках спецификации современных стандартов, ключевые особенности</p>
       </li>
-      <li class="import-features__item feature feature--service-center">
+      <li class="feature feature--service-center">
         <p class="feature__title">Обслуживание в российских сервис-центрах</p>
         <p class="feature__desription">Небольшой текст от преимуществе в рамках спецификации современных стандартов, ключевые особенности</p>
       </li>
-      <li class="import-features__item feature feature--modern-equip">
+      <li class="feature feature--modern-equip">
         <p class="feature__title">Современное оборудование</p>
         <p class="feature__desription">Небольшой текст от преимуществе в рамках спецификации современных стандартов, ключевые особенности</p>
       </li>
