--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -4,13 +4,14 @@
 
 {% block content %}
   <main class="page-main">
-    <div class="container">
+    {# <div class="container">
       <h1>Главная</h1>
       <a href="./certificates.html">Сертификаты</a>
       <a href="./reviews.html">Отзывы</a>
       <a href="./comparison.html">Сравнение</a>
-    </div>
+    </div> #}
   </main>
+  {% include "./blocks/features-under-key.j2" %}
 {% endblock content %}
 
 {% block js %}
