сделал карточки услуг

--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -12,6 +12,7 @@
     </div> #}
   </main>
   {% include "./blocks/features-under-key.j2" %}
+  {% include "./blocks/services.j2" %}
 {% endblock content %}
 
 {% block js %}
