--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@
 //
 @import "./blocks/visually-hidden.scss";
 @import "./blocks/container.scss";
+@import "./blocks/section.scss";
 @import "./blocks/tabs.scss";
 @import "./blocks/button.scss";
 @import "./blocks/title.scss";
@@ -25,6 +26,7 @@
 @import "./blocks/modal.scss";
 @import "./blocks/modal-image.scss";
 @import "./blocks/swiper.scss";
+@import "./blocks/section-title.scss";
 //
 @import "./blocks/page.scss";
 @import "./blocks/page-header.scss";
@@ -61,3 +63,5 @@
 @import "./blocks/vendor.scss";
 @import "./blocks/comparison.scss";
 @import "./blocks/index-header.scss";
+@import "./blocks/service-card.scss";
+@import "./blocks/services.scss";
