сделал секцию услуг полностью

--- a/src/views/blocks/services.j2
+++ b/src/views/blocks/services.j2
@@ -82,6 +82,34 @@
           </div>
         </li>
       </ul>
+      <div class="services__consultation">
+        <h2 class="section-title section-title--white">Консультация с инженером</h2>
+        <form class="services__form form" action="https://echo.htmlacademy.ru" method="get">
+          <label class="form__label">
+            <span class="form__label-text">Ваше имя</span>
+            <input class="form__field" type="text" id="consultation-client-name" name="consultation-client-name" placeholder="Введите ваше имя">
+          </label>
+          <div class="form__row">
+            <label class="form__label">
+              <span class="form__label-text">Ваш телефон</span>
+              <input class="form__field" type="tel" id="consultation-phone" name="consultation-phone" placeholder="+7 (999) 999-99-99" required data-pristine-required-message="Обязательно к заполнению">
+            </label>
+          </div>
+          <button class="button form__submit-button" type="submit">Получить консультацию</button>
+        </form>
+        <div class="services__engineer">
+          <div class="services__engineer-info">
+            <img class="services__engineer-photo" src="@img/engineer-photo.jpg" alt="Фотография нашего инженера.">
+            <div class="services__engineer-text-info">
+              <p class="services__engineer-name">Ефаненков Анатолий Анатольевич</p>
+              <p class="services__engineer-job-title">Коммерческий директор, сооснователь</p>
+            </div>
+          </div>
+          <q class="services__engineer-quote">
+            Мы гарантируем быстрый и профессиональный ответ на запрос заказчика. Никаких секретарей и «менеджеров», только прямая связь с инженером.
+          </q>
+        </div>
+      </div>
     </div>
   </div>
 </section>
