--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -16,5 +16,6 @@
 {% endblock content %}
 
 {% block js %}
+  <script src="./js/consult-with-eng.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
