--- a/src/scss/blocks/services.scss
+++ b/src/scss/blocks/services.scss
@@ -6,10 +6,9 @@
     padding: 60px 0;
   }
 }
-.services__content {
-}
 .services__list {
   margin: 0;
+  margin-bottom: 30px;
   padding: 0;
   list-style-type: none;
 
@@ -24,8 +23,135 @@
   }
 
   @media (min-width: $desktop-width) {
+    margin-bottom: 50px;
     grid-template-columns: repeat(3, 1fr);
   }
 }
-.services__item {
+.services__consultation {
+}
+.services__form {
+  display: flex;
+  margin-bottom: 30px;
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 45px;
+    display: grid;
+    grid-template-columns: 425px 425px auto;
+    gap: 17px;
+  }
+
+  & .form__field {
+    height: 47px;
+  }
+
+  & .form__submit-button {
+    max-width: none;
+
+    @media (min-width: $desktop-width) {
+      align-self: flex-end;
+    }
+  }
+}
+.services__engineer {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  color: $white-color;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+  }
+}
+.services__engineer-info {
+  display: flex;
+  gap: 15px;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: column;
+    padding: 0 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    gap: 30px;
+    padding: 0 80px;
+  }
+}
+.services__engineer-photo {
+  max-width: 97px;
+  border-radius: 50%;
+
+  @media (min-width: $tablet-width) {
+    max-width: 180px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 220px;
+  }
+}
+.services__engineer-text-info {
+
+}
+.services__engineer-name {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 10px;
+
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 120%;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+}
+.services__engineer-job-title {
+  margin: 0;
+  padding: 0;
+
+  font-size: 15px;
+  line-height: 120%;
+
+  @media (min-width: $tablet-width) {
+    text-align: center;
+  }
+}
+.services__engineer-quote {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  padding-left: 30px;
+
+  font-family: "Jost", "Arial", sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 120%;
+
+  @media (min-width: $tablet-width) {
+    font-size: 31px;
+    margin-top: 30px;
+    padding-left: 70px;
+  }
+
+  &::before {
+    content: "''";
+    position: absolute;
+    top: 0;
+    left: 15px;
+    font-family: inherit;
+    font-size: 58px;
+    line-height: 120%;
+    font-weight: 600;
+
+    @media (max-width: $max-mobile-width) {
+      font-size: 27px;
+      left: 0;
+    }
+  }
+
+  &::after {
+    content: "";
+  }
+
+
 }
