--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -65,3 +65,4 @@
 @import "./blocks/index-header.scss";
 @import "./blocks/service-card.scss";
 @import "./blocks/services.scss";
+@import "./blocks/equipment.scss";
