--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -13,6 +13,7 @@
   </main>
   {% include "./blocks/features-under-key.j2" %}
   {% include "./blocks/services.j2" %}
+  {% include "./blocks/equipment.j2" %}
 {% endblock content %}
 
 {% block js %}
