Добавил секцию преимуществ на главную

--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -14,6 +14,7 @@
   {% include "./blocks/features-under-key.j2" %}
   {% include "./blocks/services.j2" %}
   {% include "./blocks/equipment.j2" %}
+  {% include "./blocks/our-advantages.j2" %}
 {% endblock content %}
 
 {% block js %}
